fix: Add visibility - hidden CSS to toast when it is off screen

--- a/src/scss/restaurant-details.scss
+++ b/src/scss/restaurant-details.scss
@@ -995,7 +995,7 @@ input[type="text"].has-error, input[type="range"].has-error, textarea.has-error 
   box-shadow: 0px 0px 4px 1px rgba(100,100,100,0.6);
   background-color: #333333;
   font-size: 16px;
-  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, visibility 0.3s ease;
   z-index: 9999;
   color: white;
   font-family: Open-sans, sans-serif;
@@ -1006,10 +1006,12 @@ input[type="text"].has-error, input[type="range"].has-error, textarea.has-error 
   transform: translate(0, calc(-100%));
   width: calc(100% - 20px);
 	font-weight: 300;
+	visibility: hidden;
 }
 
 .toast.show {
   transform: translate(0,0);
+	visibility: visible;
 }
 
 .toast.error {
